# strategies-hvlf

./: .gitignore  .mcp.json  README.md  main.py  pyproject.toml  rotation_scanner.db  run_scan.py  scanner_pattern_analysis.py  scanner_pattern_report.md  strategy_analytics.db  trading.db
.claude/: settings.local.json
.claude/commands/: end-trading-day.md  run-ml-strategies.md  run-rotation-strategies.md  run-trading-engine.md  start-ml-trading-day.md  start-rotation-strategies.md  start-trading-day.md  stop-rotation-strategies.md
backtest/: backtest_results.db  engine.py  run_backtest.py  strategies.py
data/: analysis_20260415.md  scanner_results_20260415.json
data/historical/: ALMU.json  ASPI.json  BIRD.json  CTNT.json  GPRO.json  HOTH.json  IMMP.json  IONL.json  IONX.json  NCI.json  NICM.json  OKLL.json  QUBX.json  SMU.json  VSA.json  WGRX.json
data/instructions/: daily_runbook_2026-04-17.md  ml_strategies_engine.md  rotation_strategies_engine.md  scanner_cron_job.md  strategy_12_ml_rank_velocity.md  strategy_13_rl_scanner_navigator.md  strategy_14_llm_news_sentiment.md  strategy_15_hmm_regime_detector.md  strategy_16_gnn_cooccurrence.md  strategy_18_genai_scenario_planning.md  (+32 more)
docs/: 00_Strategy_Overview_and_Comparative_Analysis.md  Rotation_Strategy_Enhancement_Report.md  Rotation_Strategy_ML_Enhancement_Report.md  S12_ML_Rank_Velocity.md  S15_HMM_Regime_Detector.md  S20_Anomaly_Detection.md  S23_LSTM_Rank_Forecast.md  S30_MAML_Few_Shot.md
ib_mcp/: analytics_db.py  config.py  connection.py  db.py  indicators.py  rotation_db.py  scanner_data.py  server.py
(+69 files in other folders)
